--- a/index.html
+++ b/index.html
@@ -434,16 +434,32 @@
 
 fetch('https://raw.githubusercontent.com/geosenso92/fitness-locator-map/main/data/gemkaart24.json')
   .then(response => response.json())
-  .then(data => {
-    L.geoJSON(data, {
-      style: {
-        color: "#555",
-        weight: 1,
-        fillOpacity: 0  // transparant invullen, alleen lijnen
+  .then(gemeenteData => {
+    const gemeenteLayer = L.geoJSON(gemeenteData, {
+      filter: function (feature) {
+        return feature.properties.gemeentenaam !== "Utrecht";
+      },
+      style: function (feature) {
+        return {
+          color: "#555",
+          weight: 1,
+          fillColor: "#f7f7f7",
+          fillOpacity: 0.3
+        };
       },
       onEachFeature: function (feature, layer) {
-        const naam = feature.properties.naam || "Gemeente";
-        layer.bindPopup("Gemeente: " + naam);
+        layer.on({
+          mouseover: function (e) {
+            e.target.setStyle({
+              weight: 2,
+              color: '#000',
+              fillOpacity: 0.5
+            });
+          },
+          mouseout: function (e) {
+            gemeenteLayer.resetStyle(e.target);
+          }
+        });
       }
     }).addTo(map);
   })
