Update index.html - legendtitle

--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
 <div id="map"></div>
 
 <div class="legend" id="legend">
+  <div class="legend-title" style="font-size: 14px; text-align: center; margin-bottom: 5px;">Legenda</div>
   <div class="legend-header" style="display: flex; justify-content: space-between; align-items: center;">
     <span class="legend-title">Suitability index</span>
     <div id="legend-toggle" title="Minimaliseer legenda" style="cursor:pointer;">−</div>
