--- a/index.html
+++ b/index.html
@@ -135,20 +135,19 @@
       line-height: 1.3;
     }
     .legend {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  padding: 8px 12px;
-  background: white;
-  font-size: 12px;
-  border-radius: 6px;
-  box-shadow: 0 0 5px rgba(0,0,0,0.3);
-  z-index: 1100;
-  width: 180px;
-  line-height: 18px;
-  user-select: none;
-  position: relative; /* belangrijk voor absolute kinderen */
-}
+      position: relative; /* belangrijk voor absolute kinderen */
+      bottom: 10px;
+      left: 10px;
+      padding: 8px 12px;
+      background: white;
+      font-size: 12px;
+      border-radius: 6px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.3);
+      z-index: 1100;
+      width: 180px;
+      line-height: 18px;
+      user-select: none;
+    }
     .legend-title {
       font-weight: bold;
       margin-bottom: 7px;
@@ -165,8 +164,8 @@
       flex: 1;
     }
     .color-box {
-  flex: 1;
-  height: 16px;
+      flex: 1;
+      height: 16px;
     }
     .legend-labels {
       display: flex;
@@ -189,47 +188,48 @@
       text-align: center;
     }
     #legend-info-toggle {
-  position: absolute;
-  top: 8px;
-  left: 8px;
-  width: 20px;
-  height: 20px;
-  background: black;
-  color: white;
-  border-radius: 50%;
-  font-weight: bold;
-  font-size: 14px;
-  text-align: center;
-  line-height: 20px;
-  cursor: pointer;
-  user-select: none;
-  z-index: 1200;
-}
-.legend-info {
-  font-size: 11px;
-  color: #444;
-  margin-top: 4px;
-  line-height: 1.3;
-}
-/* Minimaliseerknop rechtsboven in legend met grijs vierkant */
-#legend-toggle {
-  position: absolute;
-  top: 6px;
-  right: 6px;
-  width: 26px;
-  height: 26px;
-  background: #ccc;
-  color: #333;
-  border-radius: 4px;
-  font-weight: bold;
-  font-size: 20px;
-  text-align: center;
-  line-height: 26px;
-  cursor: pointer;
-  user-select: none;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.2);
-  z-index: 1200;
-}
+      position: absolute;
+      top: 8px;
+      left: 8px;
+      width: 20px;
+      height: 20px;
+      background: black;
+      color: white;
+      border-radius: 50%;
+      font-weight: bold;
+      font-size: 14px;
+      text-align: center;
+      line-height: 20px;
+      cursor: pointer;
+      user-select: none;
+      z-index: 1200;
+    }
+    .legend-info {
+      font-size: 11px;
+      color: #444;
+      margin-top: 4px;
+      line-height: 1.3;
+      display: none;
+    }
+    /* Minimaliseerknop rechtsboven in legend met grijs vierkant */
+    #legend-toggle {
+      position: absolute;
+      top: 6px;
+      right: 6px;
+      width: 26px;
+      height: 26px;
+      background: #ccc;
+      color: #333;
+      border-radius: 4px;
+      font-weight: bold;
+      font-size: 20px;
+      text-align: center;
+      line-height: 26px;
+      cursor: pointer;
+      user-select: none;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+      z-index: 1200;
+    }
   </style>
   <title>Locatievinder Fitness Center</title>
 </head>
