--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       line-height: 1.3;
     }
     .legend {
-      position: relative; /* belangrijk voor absolute kinderen */
+      position: absolute; /* belangrijk voor absolute kinderen */
       bottom: 10px;
       left: 10px;
       padding: 8px 12px;
